tests/baselines/reference/classExtendsClauseClassMergedWithModuleNotReferingConstructor.errors.txt
==== tests/cases/compiler/classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts (1 errors) ====
    class A {
        a: number;
    }
    module A {
        export var v: string;
    }
    
    module Foo {
        var A = 1;
        class B extends A {
                        ~
!!! classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(10,21): error TS2186: Type name 'A' in extends clause does not reference constructor function for 'A'.
            b: string;
        }
    }